--- a/security/security-demo/src/main/resources/static/login.html
+++ b/security/security-demo/src/main/resources/static/login.html
@@ -18,6 +18,14 @@
 				<td><input type="password" name="password"></td>
 			</tr>
 			<tr>
+				<td>图形验证码:</td>
+				<td>
+					<input type="text" name="">
+				    <img src="/createCode"/>
+				</td>
+
+			</tr>
+			<tr>
 				<td colspan="2">
 					<button type="submit" name="type" value="regist">登录</button>
 				</td>
