--- a/security/security-demo/src/main/resources/static/login.html
+++ b/security/security-demo/src/main/resources/static/login.html
@@ -20,8 +20,8 @@
 			<tr>
 				<td>图形验证码:</td>
 				<td>
-					<input type="text" name="imgCode">
-				    <img src="/createCode"/>
+					<input type="text" name="validate-code">
+				    <img src="/code/img"/>
 				</td>
 			</tr>
 			<tr>
@@ -39,17 +39,17 @@
 	</form>
 
     <h2>手机号登录</h2>
-	<form action="" method="post">
+	<form action="/login/sms" method="post">
 		<table>
 			<tr>
 				<td>手机号:</td>
-				<td><input type="text" name="mobile"></td>
+				<td><input type="text" name="sms" value="15802179514"></td>
 			</tr>
 			<tr>
 				<td>手机验证码:</td>
 				<td>
-					<input type="text" name="smsCode">
-					<img src=""/>
+					<input type="text" name="validate-code">
+					<a href="/code/sms?sms=15802179514" target="">发送验证码</a>
 				</td>
 			</tr>
 			<tr>
@@ -59,5 +59,11 @@
 			</tr>
 		</table>
 	</form>
+
+
+	<h2>第三方登录</h2>
+    <a href="">qq登录</a>
+    <a href="">微信登录</a>
+
 </body>
 </html>
