--- a/security/security-demo/src/main/resources/static/login.html
+++ b/security/security-demo/src/main/resources/static/login.html
@@ -59,11 +59,9 @@
 			</tr>
 		</table>
 	</form>
-
-
 	<h2>第三方登录</h2>
     <a href="">qq登录</a>
-    <a href="">微信登录</a>
+    <a href="/qqLogin/weixin">微信登录</a>
 
 </body>
 </html>
