--- a/security/security-demo/src/main/resources/static/index.html
+++ b/security/security-demo/src/main/resources/static/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 
+<form action="/connect/weixin" method="post">
+    <button type="submit">绑定微信</button>
+</form>
+
 </body>
 </html>
