--- a/security/security-demo/src/main/resources/static/index.html
+++ b/security/security-demo/src/main/resources/static/index.html
@@ -10,5 +10,23 @@
     <button type="submit">绑定微信</button>
 </form>
 
+
+<form action="/connect/weixin" method="post">
+    <input type="hidden" name="_method" value="DELETE">
+    <button type="submit">解绑微信</button>
+</form>
+
+
+<form action="/connect/qq" method="post">
+    <button type="submit">绑定qq</button>
+</form>
+
+
+<form action="/connect/qq" method="post">
+    <input type="hidden" name="_method" value="DELETE">
+    <button type="submit">解绑qq</button>
+</form>
+
+
 </body>
 </html>
