--- a/security/security-demo/src/main/resources/static/login.html
+++ b/security/security-demo/src/main/resources/static/login.html
@@ -60,7 +60,7 @@
 		</table>
 	</form>
 	<h2>第三方登录</h2>
-    <a href="">qq登录</a>
+    <a href="/qqLogin/qq">qq登录</a>
     <a href="/qqLogin/weixin">微信登录</a>
 
 </body>
