--- a/security/security-demo/src/main/resources/static/login.html
+++ b/security/security-demo/src/main/resources/static/login.html
@@ -21,7 +21,8 @@
 				<td>图形验证码:</td>
 				<td>
 					<input type="text" name="validate-code">
-				    <img src="/code/img"/>
+				    <img src="/code/img?device-id=123"/>
+					<input  type="hidden" name="device-id" value="123"/>
 				</td>
 			</tr>
 			<tr>
